--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -47,19 +47,18 @@ table {
     border-spacing: 0;
 }
 
-/***/
-/* Questions
-* How do I manage the width of .hero-hd?
-* How do you know which/how many classes you should be using?
-* How should you order the CSS?
-* How do you use "::about"?
-*How do I get the purple line inbetween hero-hd and hero-bd
-* How do I add a background image?
-*/
+/* Base Elements */
 html {
     font-size: 16px;
 }
 
+/* Layout */
+.wrapper {
+    padding: 0 30px;
+}
+
+
+/* Masthead */
 .masthead {
     padding: 24px 0;
 }
@@ -74,11 +73,7 @@ html {
     align-items: center;
 }
 
-.wrapper {
-    margin: 0 auto;
-    max-width: 1152px;
-}
-
+/* Logo */
 .logo {
     width: 34px;
     margin-right: 34px;
@@ -88,6 +83,21 @@ html {
     width: 100%;
 }
 
+/* Headings */
+.hdg {
+  font-family: 'Roboto Mono', monospace;
+  color: #6200ea;
+  font-weight: 300;
+}
+
+.hdg_1 {
+  line-height: 64px;
+  font-size: 2.85rem;
+  position: relative;
+  padding-bottom: 26px;
+}
+
+/* Navigation */
 .navigation ul {
     display: flex;
     list-style-type: none;
@@ -113,6 +123,7 @@ html {
     box-shadow: inset 0 -1px 0 0 #424242;
 }
 
+/* Buttons */
 .btn {
     font-family: 'Roboto Mono', monospace;
     font-size: 0.8rem;
@@ -131,32 +142,49 @@ html {
     background-color: #4a148c;
 }
 
+/* Hero */
 .hero{
-  background-image: url('conversation-ai-hero.png');
-  background-size: cover;
+  background-image: url('../img/conversation-ai-hero.png');
+  background-size: 62%;
+  background-repeat: no-repeat;
+  background-position: bottom right;
 }
 
 .hero-content {
-  padding: 114px 77px 0;
+  padding: 114px 0 0;
   box-sizing: border-box;
-  width: 60%;
-  min-width: 544px;
 }
 
 .hero-hd {
   margin: 0px 0px 36px 0px;
 }
 
-.hdg_1 {
-  font-family: 'Roboto Mono', monospace;
-  color: #6200ea;
-  line-height: 64px;
-  font-weight: 300;
-  font-size: 2.85rem;
+.hero-hd .hdg:after {
+  content: '';
+  width: 48px;
+  height: 2px;
+  background: #6200EA;
+  position: absolute;
+  bottom: 0;
+  left: 0;
 }
 
 .hero-bd{
   font-family: 'Roboto', sans-serif;
   line-height: 26px;
   letter-spacing: .044em;
+}
+
+/* Media Breakpoints */
+@media (min-width: 1172px) {
+  .wrapper {
+    padding: 0;
+    margin: 0 auto;
+    max-width: 1152px;
+  }
+
+  .hero-content {
+    width: 60%;
+    min-width: 544px;
+  }
 }
